# openai-reponses-bridge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: setup.ps1  setup.sh  start.ps1  start.sh
src/: adapter.py  config.py  logging_setup.py  main.py
src/openai_responses_bridge/: logging_setup.py  main.py  streaming.py
tests/: test_adapter.py
