[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "openai-responses-bridge"
version = "0.1.0"
description = "Lightweight reverse proxy that adapts legacy OpenAI completions to the Responses API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.27.2",
  "uvicorn==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "structlog==24.4.0",
  "tenacity==9.0.0",
  "orjson==3.10.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openai_responses_bridge"]

[tool.uv]
dev-dependencies = ["pytest==8.3.4"]
